{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 15,
  "lineage": "318576c6-d59d-4d71-3346-889b21ec6a47",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:774305578623:internet-gateway/igw-01f9cd43e9f08162c",
            "id": "igw-01f9cd43e9f08162c",
            "owner_id": "774305578623",
            "tags": {
              "Name": "tuananh-internet-gateway"
            },
            "tags_all": {
              "Name": "tuananh-internet-gateway"
            },
            "vpc_id": "vpc-033831aeaa6690396"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01f9cd43e9f08162c",
            "id": "r-rtb-09325fb181bee4cbd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09325fb181bee4cbd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:774305578623:route-table/rtb-09325fb181bee4cbd",
            "id": "rtb-09325fb181bee4cbd",
            "owner_id": "774305578623",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tuananh-public-route-table"
            },
            "tags_all": {
              "Name": "tuananh-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-033831aeaa6690396"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce3bf4f49e29cba5",
            "route_table_id": "rtb-09325fb181bee4cbd",
            "subnet_id": "subnet-049ea4ca581b13194"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4a6215865ad8519",
            "route_table_id": "rtb-09325fb181bee4cbd",
            "subnet_id": "subnet-0134532340a2051ef"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:774305578623:subnet/subnet-049ea4ca581b13194",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049ea4ca581b13194",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "774305578623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tuananh-public-subnet-0"
            },
            "tags_all": {
              "Name": "tuananh-public-subnet-0"
            },
            "vpc_id": "vpc-033831aeaa6690396"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:774305578623:subnet/subnet-0134532340a2051ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0134532340a2051ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "774305578623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tuananh-public-subnet-1"
            },
            "tags_all": {
              "Name": "tuananh-public-subnet-1"
            },
            "vpc_id": "vpc-033831aeaa6690396"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:774305578623:vpc/vpc-033831aeaa6690396",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-045cb2110319721f9",
            "default_route_table_id": "rtb-0e6b4711f89e41299",
            "default_security_group_id": "sg-04cc6c2ea3d8c37e6",
            "dhcp_options_id": "dopt-0e6989dcec90fbb01",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-033831aeaa6690396",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6b4711f89e41299",
            "owner_id": "774305578623",
            "tags": {
              "Name": "tuananh-my-vpc"
            },
            "tags_all": {
              "Name": "tuananh-my-vpc"
            }
          }
        }
      ]
    }
  ]
}